fix overflow

--- a/sass/style/_block.scss
+++ b/sass/style/_block.scss
@@ -1,4 +1,4 @@
-@import "../base/variables";
+@import '../base/variables';
 // Name:            Block
 //
 // ----------------------------------------------------------------------------
@@ -35,6 +35,7 @@
   }
   // Modificator '.block.block--particles-second'
   &.block--particles-second {
+    overflow: hidden;
     position: relative;
     background: rgb(65, 70, 90);
     background: -moz-radial-gradient(
@@ -58,12 +59,12 @@
     color: #fff;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       right: 6%;
       top: 0;
       width: 50%;
-      background-image: url("../svg/color-line.svg");
+      background-image: url('../svg/color-line.svg');
       z-index: 1;
       // background-position: center;
       background-repeat: no-repeat;
@@ -144,7 +145,7 @@
     color: #fff;
     &:after {
       display: inline-block;
-      content: "";
+      content: '';
       position: absolute;
       bottom: 0;
       left: -20px;
@@ -174,14 +175,14 @@
     font-size: 32px;
     line-height: 32px;
     font-weight: 900;
-    font-family: "FuturaPTBold";
+    font-family: 'FuturaPTBold';
   }
   & &__subtitle {
     font-size: 26px;
     line-height: 34px;
     font-weight: 600;
     margin-bottom: 25px;
-    font-family: "ProximaNova-Bold";
+    font-family: 'ProximaNova-Bold';
   }
 
   & &__text {
